# DFM

./: README.md  pyproject.toml
src/dfm/: __init__.py  inversegamma.py  test.py
tests/: SPYTestcase.ipynb
